<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inclass_10.AddActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AddActivity_label"
            android:id="@+id/textViewName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Expense_Name_label"
            android:id="@+id/textView2"
            android:layout_below="@+id/textViewName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="60dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextExpenseName"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editTextAmount"
        android:layout_alignStart="@+id/editTextAmount" />

    <Spinner
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCategory"
        android:prompt="@string/SpinnerCategoryPrompt"
        android:layout_alignBottom="@+id/textViewCategory"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddExpenseButton"
            android:id="@+id/buttonSaveExpense"
            android:layout_marginLeft="30dp"
        android:layout_alignBaseline="@+id/buttonCancelExpense"
        android:layout_alignBottom="@+id/buttonCancelExpense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CancelExpenseButton"
            android:id="@+id/buttonCancelExpense"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonSaveExpense"
        android:layout_toEndOf="@+id/buttonSaveExpense"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextAmount"
        android:layout_below="@+id/textViewCategory"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="33dp"
        android:layout_alignLeft="@+id/spinnerCategory"
        android:layout_alignStart="@+id/spinnerCategory" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AmountLabel"
            android:id="@+id/textViewAmount"
        android:layout_alignBaseline="@+id/editTextAmount"
        android:layout_alignBottom="@+id/editTextAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Category_label"
            android:id="@+id/textViewCategory"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/editTextExpenseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
