<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inclass_10.ShowExpense">






        <TextView
            android:text="@string/Name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="60dp"
            android:id="@+id/textView4"
            android:text="@string/Category_label_2" />

        <TextView
            android:text="@string/Amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="80dp"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView8"
            android:text="@string/Date_label"
            android:layout_marginTop="60dp" />

        <Button
            android:text="@string/Close_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/buttonClose"
            android:layout_below="@+id/textViewDate"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="130dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCategory"
            android:text="abcdef"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toRightOf="@+id/buttonClose"
            android:layout_toEndOf="@+id/buttonClose" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAmount"
            android:text="abcd"
            android:layout_above="@+id/textView8"
            android:layout_alignLeft="@+id/textViewCategory"
            android:layout_alignStart="@+id/textViewCategory" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDate"
            android:text="abc"
            android:layout_alignBaseline="@+id/textView8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignLeft="@+id/textViewAmount"
            android:layout_alignStart="@+id/textViewAmount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName"
            android:text="abcde"
            android:layout_above="@+id/textView4"
            android:layout_alignLeft="@+id/textViewCategory"
            android:layout_alignStart="@+id/textViewCategory" />


</RelativeLayout>
